Updated the web page

--- a/architecture.html
+++ b/architecture.html
@@ -118,14 +118,10 @@ architecture: true
           <div class="page-header">
             <h1>What next?</h1>
           </div>
-          <p class="lead">Get started with a first example and viewing code snippets, or start reading the Client API to implement your own applications.</p>
-          <a class="btn btn-large btn-primary" href="./getting-started.html">Get Started</a>
-          <a class="btn btn-large" href="./client-api.html" style="margin-left: 5px;">Client API</a>
+          <p class="lead">Get started with the API, reading the Client or Server side API to implement your own applications.</p>
+          <a class="btn btn-large btn-primary" href="./client-api.html">Client API</a>
+          <a class="btn btn-large" href="./server-api.html" style="margin-left: 5px;">Server API</a>
         </section>
-
-
-
-
       </div>
     </div>
 
