--- a/roadmap.html
+++ b/roadmap.html
@@ -60,14 +60,10 @@ roadmap: true
           <div class="page-header">
             <h1>What next?</h1>
           </div>
-          <p class="lead">Get started with a first example and viewing code snippets, or start reading the Client API to implement your own applications.</p>
-          <a class="btn btn-large btn-primary" href="./getting-started.html">Get Started</a>
+          <p class="lead">Get started installing Lynckia in your own computer, or start reading the Client API to implement your own applications.</p>
+          <a class="btn btn-large btn-primary" href="./install.html">Get Started</a>
           <a class="btn btn-large" href="./client-api.html" style="margin-left: 5px;">Client API</a>
         </section>
-
-
-
-
       </div>
     </div>
 
