--- a/try.html
+++ b/try.html
@@ -45,7 +45,7 @@ try: true
             <h1>Do you like it?</h1>
           </div>
           <p class="lead">If you like Lynckia and want to include it in your web site, go on! It's so easy!</p>
-          <a class="btn btn-large btn-primary" href="./getting-started.html">Get Started</a>
+          <a class="btn btn-large btn-primary" href="./install.html">Get Started</a>
           
         </section>
 
