--- a/getting-started.html
+++ b/getting-started.html
@@ -9,7 +9,7 @@ gettingstarted: true
 <header class="jumbotron subhead" id="overview">
   <div class="container">
     <h1>Getting started</h1>
-    <p class="lead">Overview of the project, it's contents, and how to get started with a simple template.</p>
+    <p class="lead">Overview of the project, it's contents, and how to get started installing it in your computer.</p>
   </div>
 </header>
 
