--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ home: true
     <img src="assets/img/star.svg" alt="Lynckia" class="hidden-phone hidden-tablet star">
     <!--<img src="assets/img/star-christmas.png" alt="Lynckia" class="hidden-phone hidden-tablet star">-->
     <p>Open Source WebRTC Communications Provider.</p>
-    <p><a href="./getting-started.html" class="btn btn-primary btn-large hidden-phone hidden-tablet">Start Using it!</a></p>
+    <p><a href="./install.html" class="btn btn-primary btn-large hidden-phone hidden-tablet">Start Using it!</a></p>
     <ul class="masthead-links">
       <li>Beta version</li>
     </ul>
