--- a/install.html
+++ b/install.html
@@ -155,9 +155,15 @@ git clone https://github.com/ging/lynckia.git
           <div class="page-header">
             <h1>What next?</h1>
           </div>
-          <p class="lead">Head to the Lynckia Architecture for more information about different Lynckia components, or take the next leap and get into the client API for rooms and users management.</p>
-          <a class="btn btn-large btn-primary" href="./architecture.html">Visit the Architecture</a>
-          <a class="btn btn-large" href="./client-api.html" style="margin-left: 5px;">Start with Client API</a>
+          <p class="lead">Head to the Lynckia Architecture for more information about different Lynckia components, or start developing your custom service getting into the client or server APIs.</p>
+          <p>If you want you can start by modifying the basic example. You can find the code in <code>lynckia/extras/basic_example/</code>
+            <ul>
+            <li><code>basicServer.js</code> is a node.js server that manages the communication between the clients and nuve. Here you can add your own methods using the server side API (Nuve API). </li>
+            <li>In <code>public/</code> folder you cand find the html and javascript code that is served to the clients. Here you can add your client logic (using client API) and your own styles and functionalities.</p></li>
+            </ul>
+          <a class="btn btn-large btn-primary" href="./architecture.html">Lynckia Architecture</a>
+          <a class="btn btn-large" href="./client-api.html" style="margin-left: 5px;">Client API</a>
+          <a class="btn btn-large" href="./server-api.html" style="margin-left: 5px;">Server API</a>
         </section>
 
       </div>
