--- a/server-api.html
+++ b/server-api.html
@@ -161,7 +161,7 @@ var roomId = '30121g51113e74fff3115502';
 var name = 'userName';
 var role = '';
 
-N.API.createToken(room, name, role, function(token) {
+N.API.createToken(roomId, name, role, function(token) {
   console.log('Token created: ', token);
 });</pre>
 
