Added callback error doc

--- a/server-api.html
+++ b/server-api.html
@@ -108,7 +108,7 @@ var roomName = 'myFirstRoom';
 
 N.API.createRoom(roomName, function(room) {
   console.log('Room created with id: ', room._id);
-});</pre>
+}, errorCallback);</pre>
 
           <h3>Get Rooms</h3>
           <p>You can ask Nuve for a list of the rooms in your service:</p>
