Added callback error doc

--- a/server-api.html
+++ b/server-api.html
@@ -99,7 +99,7 @@ N.API.init(serviceId, serviceKey, nuve_host);</pre>
           </ul>
           <p>In your service you can create a room, get a list of rooms that you have created, get the info about a determined room or delete a room when you don't need it.</p>
 
-          <p>In all functions you can include an error callback ir order to catch possible problems with nuve server.</p>
+          <p>In all functions you can include an optional error callback ir order to catch possible problems with nuve server.</p>
 
           <h3>Create Room</h3>
           <p>To create a room you need to specify a name and a callback function. When the room is created Nuve calls this function and returns you the roomId:</p>
