Updated web page for licode

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"> 
 	
-	<title>Lynckia - WebRTC Communications Solutions</title>
+	<title>Lynckia</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
 	<link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css">
