Updated web page for licode

--- a/licode/index.html
+++ b/licode/index.html
@@ -14,6 +14,8 @@ home: true
     <p><a href="./install.html" class="btn btn-primary btn-large hidden-phone hidden-tablet">Start Using it!</a></p>
     <ul class="masthead-links">
       <li>By Lynckia</li>
+      <a href="http://lynckia.com" >
+      <img style="width:50px;" src="assets/img/star.png" alt="Licode"></a>
     </ul>
   </div>
 </div>
