Fixed a bug in mobile menu

--- a/index.html
+++ b/index.html
@@ -28,18 +28,10 @@
                         	<ul class="visible-phone">
                                 <li>
                                     <select id="phone_menu">
-                                    	<option value="">Menu</option>
-                                        <option value="home.html">Home</option>
-                                        <option value="about.html">About</option>
-                                        <option value="features.html">Features</option>
-                                        <option value="404.html">404 Error</option>
-                                        <option value="portfolio.html">Portfolio</option>
-                                        <option value="portfolio-3column.html">3 Column</option>
-                                        <option value="portfolio-2column.html">2 Column</option>
-                                        <option value="single-project.html">Single Project</option>
-                                        <option value="blog.html">Blog</option>
-                                        <option value="post.html">Single Post</option>
-                                        <option value="contact.html">Contact</option>
+                                        <option value="#home">Home</option>
+                                        <option value="#licode">Licode</option>
+                                        <option value="#team">Team</option>
+                                        <option value="#contact">Contact</option>
                                     </select>
                                 </li>
                             </ul>
@@ -48,7 +40,7 @@
                                 	<a href="#home" id="trigger-home" class="lsf scroll" data-placement="top" data-original-title="HOME">home</a>
 
                                 </li>
-                                                                <li class="parent">
+                                <li class="parent">
                                     <a href="#licode" id="trigger-features" class="lsf licodelogo scroll" data-placement="top" data-original-title="LICODE">power</a>
                                 </li>
                                 <li class="parent"><a href="#team" id="trigger-about" class="lsf scroll" data-placement="top" data-original-title="TEAM">group</a></li>
