fixed a bug in install page

--- a/licode/index.html
+++ b/licode/index.html
@@ -74,7 +74,7 @@ home: true
     <div class="row-fluid">
       <div class="span3">
         <h2>Erizo</h2>
-        <p>It's the WebRTC Multipoint Control Unit (MCU). It's written in C++ and is 100\% compatible with WebRTC standard and its protocols.</p>
+        <p>It's the WebRTC Multipoint Control Unit (MCU). It's written in C++ and is 100% compatible with WebRTC standard and its protocols.</p>
       </div>
       <div class="span3">
         <h2>Erizo API</h2>
