fixed bug in blog

--- a/licode/blog.html
+++ b/licode/blog.html
@@ -22,10 +22,10 @@ blog: true
 <div class="row-fluid">
 <section id="requirements" class="container offset3 span6" >
     <div class="page-header">
-        <p><h1><a href="../{{ post.url }}">{{ post.title }}</a></h1>{{ post.date | date_to_string }} - {{site.author}}</p>
+        <p><h1><a href="http://lynckia.com{{ post.url }}">{{ post.title }}</a></h1>{{ post.date | date_to_string }} - {{site.author}}</p>
     </div>
     <p>{{ post.content | truncatewords: 100 }}</p>
-    <p><a href="../{{ post.url }}">Read more ...</a></p>
+    <p><a href="http://lynckia.com{{ post.url }}">Read more ...</a></p>
     
  </div>
 </section>
