--- a/licode/blog.html
+++ b/licode/blog.html
@@ -9,7 +9,7 @@ blog: true
 <header class="jumbotron subhead" id="overview">
   <div class="container">
     <h1>Licode's Blog&nbsp;<a href="http://feeds.feedburner.com/lynckia" rel="alternate" type="application/rss+xml"><img src="http://www.feedburner.com/fb/images/pub/feed-icon32x32.png" alt="" style="vertical-align:middle;border:0"/></a></h1>
-    <p class="lead">Here we will keep you informed about last news, events, and other stuff related to Lynckia and WebRTC.</p>
+    <p class="lead">Here we will keep you informed about last news, events, and other stuff related to Lynckia, Licode and WebRTC.</p>
   </div>
 </header>
 
