--- a/licode/community.html
+++ b/licode/community.html
@@ -17,7 +17,7 @@ community: true
     <div class="container">
   <div class="marketing row-fluid">
         <div id="overview" class="span4">
-            <a href="http://github.com/ging/lynckia"><img src="assets/img/github.png" height="50"></a>
+            <a href="http://github.com/ging/licode"><img src="assets/img/github.png" height="50"></a>
             <br/>
             <p class="lead"> Licode's development takes place at Github.</p>
             <p> There you will find the issues tracker, wiki pages and pull requests. Explore <a href="http://github.com/ging/">GING profile</a> on github to check all the associated repositories</p>
