--- a/licode/index.html
+++ b/licode/index.html
@@ -31,9 +31,9 @@ home: true
       </li>
 
       <li class="github-btns">
-        <iframe src="http://ghbtns.com/github-btn.html?user=ging&repo=lynckia&type=fork"
+        <iframe src="http://ghbtns.com/github-btn.html?user=ging&repo=licode&type=fork"
         allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=ging&repo=lynckia&type=watch&count=true"
+        <iframe src="http://ghbtns.com/github-btn.html?user=ging&repo=licode&type=watch&count=true"
         allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
       </li>
     </ul>
