--- a/licode/install.html
+++ b/licode/install.html
@@ -67,7 +67,7 @@ install: true
           Now clone the repository.  
           </div>
 <pre class="prettyprint linenums">
-git clone https://github.com/ging/lynckia.git
+git clone https://github.com/ging/licode.git
 </pre>
           <p>All scrips used below are included in this code cloned from github.</p>
         </section>
@@ -84,14 +84,14 @@ git clone https://github.com/ging/lynckia.git
             Ubuntu 12.04 LTS.
             </div>
 <pre class="prettyprint linenums">
-./lynckia/scripts/installUbuntuDeps.sh
+./licode/scripts/installUbuntuDeps.sh
 </pre>
 
         <div class="bs-docs-example">
             Mac OS X Mountain Lion.
             </div>
 <pre class="prettyprint linenums">
-./lynckia/scripts/installMacDeps.sh
+./licode/scripts/installMacDeps.sh
 </pre>
         </section>
 
@@ -107,8 +107,8 @@ git clone https://github.com/ging/lynckia.git
             You will only need to execute these commands. They do not depend on the Operating System.
             </div>
 <pre class="prettyprint linenums">
-./lynckia/scripts/installErizo.sh
-./lynckia/scripts/installNuve.sh
+./licode/scripts/installErizo.sh
+./licode/scripts/installNuve.sh
 </pre>
         </section>
 
@@ -123,7 +123,7 @@ git clone https://github.com/ging/lynckia.git
             You will only need to execute the next command. It does not depend on the Operating System.
             </div>
 <pre class="prettyprint linenums">
-./lynckia/scripts/installBasicExample.sh
+./licode/scripts/installBasicExample.sh
 </pre>
         </section>
 
@@ -138,13 +138,13 @@ git clone https://github.com/ging/lynckia.git
             This step will initialize all Licode components.
             </div>
 <pre class="prettyprint linenums">
-./lynckia/scripts/initLynckia.sh
+./licode/scripts/initLicode.sh
 </pre>
           <div class="bs-docs-example">
             This step will initialize the basic example.
             </div>
 <pre class="prettyprint linenums">
-./lynckia/scripts/initBasicExample.sh
+./licode/scripts/initBasicExample.sh
 </pre>
           <p class="lead"> Now you can connect to "localhost:3001" and test your basic videoconference example!</p>
         </section>
