--- a/licode/roadmap.html
+++ b/licode/roadmap.html
@@ -51,7 +51,7 @@ roadmap: true
             <li>Support for non-browser based clients.</li>
           </ul>
           <p>Below you can see the last commits and open issues to check the current state of Licode</p>
-          <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=ging&repo=lynckia&limit=10" allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
+          <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=ging&repo=licode&limit=10" allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
          </section>
 
         <!-- Next
