Roadmap has been changed

--- a/licode/roadmap.html
+++ b/licode/roadmap.html
@@ -41,14 +41,13 @@ roadmap: true
           <div class="page-header">
             <h1>2. Future Enhancements</h1>
           </div>
-          <p class="lead">Licode is growing very fast, with new enhancements and features.</p>
+          <p class="lead">Licode is growing very fast, with new enhancements and features, such as Firefox compatibility and RTSP support.</p>
           <p>We are currently working to develop the next features in the short term:</p>
           <ul>
-            <li>Support to more RTCP packets.</li>
-            <li>Support to other browsers: Ericsson Bowser and Mozilla Firefox.</li>
-            <li>Include external streams from RTMP, RTSP, raw RTP, and so on</li>
+            <li>Recording of video and audio in rooms.</li>
+            <li>Support to other browsers: Ericsson Bowser.</li>
+            <li>Include external streams from RTMP, raw RTP, and so on</li>
             <li>Improve monitorization and notifications about rooms, users and streams</li>
-            <li>Support for non-browser based clients.</li>
           </ul>
           <p>Below you can see the last commits and open issues to check the current state of Licode</p>
           <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=ging&repo=licode&limit=10" allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
