--- a/licode/server-api.html
+++ b/licode/server-api.html
@@ -110,6 +110,14 @@ N.API.createRoom(roomName, function(room) {
   console.log('Room created with id: ', room._id);
 }, errorCallback);</pre>
 
+<p>You can create peer - to - peer rooms in which users will communicate directly between their browsers using server side only for signalling.</p>
+          <pre class="prettyprint linenums">
+var roomName = 'myP2PRoom';
+
+N.API.createRoom(roomName, function(room) {
+  console.log('P2P room created with id: ', room._id);
+}, errorCallback, {p2p: true});</pre>
+
           <h3>Get Rooms</h3>
           <p>You can ask Nuve for a list of the rooms in your service:</p>
           <pre class="prettyprint linenums">
