Updated demo portls

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="css/licode_demo.css" type="text/css">
     <script src="js/licode_demo.js"></script>
-    <script src="http://rosendo.dit.upm.es:4001/javascripts/erizo.js"></script>
+    <script src="http://chotis2.dit.upm.es/javascripts/erizo.js"></script>
     
     
 </head>
