Updated demo portls

--- a/licode/server-api.html
+++ b/licode/server-api.html
@@ -370,7 +370,7 @@ app.listen (80);</pre>
           </div>
           <p class="lead">Head to the Server API for information, examples, and code snippets of the additional API to manage rooms, and give access to users, or start testing this API.</p>
           <a class="btn btn-large btn-primary" href="./server-api.html">Visit the Server API</a>
-          <a class="btn btn-large" href="./try.html" style="margin-left: 5px;">Try it!</a>
+          <a class="btn btn-large" href="http://chotis2.dit.upm.es" style="margin-left: 5px;">Try it!</a>
         </section>
 
       </div>
