--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         
                     </div>
                     <div class="row">
-                        <div class="span4 team">
+                        <div class="span6 team">
                             <img src="images/team/001.jpg" title=" " alt=" "/>
                             <div class="clear"></div>
                             <div class="sub_heading">Javier Cerviño</div>
@@ -197,11 +197,11 @@
                             <p></p>
                              <div class="single_break"></div>
                              <div class="social-icons2">
-                                <a href="http://www.linkedin.com/profile/view?id=36508164&locale=es_ES&trk=tyah" target="_blank" target=data-placement="top" data-original-title="LINKEDIN">i</a>
+                                <a href="http://www.linkedin.com/profile/view?id=36508164" target="_blank" target=data-placement="top" data-original-title="LINKEDIN">i</a>
                                 <a href="http://twitter.com/jcague" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
                             </div>
                         </div>
-                        <div class="span4 team">
+                        <div class="span6 team">
                             <img src="images/team/002.jpg" title=" " alt=" "/>
                             <div class="clear"></div>
                             <div class="sub_heading">Pedro Rodríguez</div>
@@ -211,11 +211,14 @@
                             <p></p>
                             <div class="single_break"></div>
                             <div class="social-icons2">
-                                <a href="http://www.linkedin.com/profile/view?id=148057752&locale=es_ES&trk=tyah" target="_blank" data-placement="top" data-original-title="LINKEDIN">i</a>
+                                <a href="http://www.linkedin.com/profile/view?id=148057752" target="_blank" data-placement="top" data-original-title="LINKEDIN">i</a>
                                 <a href="http://twitter.com/lodoyun" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
                             </div>
                         </div>
-                        <div class="span4 team">
+                    </div>
+                    <div class="horizontal_seperator"></div>
+                    <div class="row">
+                        <div class="span6 team">
                             <img src="images/team/003.jpg" title=" " alt=" "/>
                             <div class="clear"></div>
                             <div class="sub_heading">Álvaro Alonso</div>
@@ -225,8 +228,22 @@
                             <p></p>
                             <div class="single_break"></div>
                             <div class="social-icons2">
-                                <a href="http://www.linkedin.com/profile/view?id=227240998&trk=tab_pro" target="_blank" data-placement="top" data-original-title="LINKEDIN">i</a>
+                                <a href="http://www.linkedin.com/profile/view?id=227240998" target="_blank" data-placement="top" data-original-title="LINKEDIN">i</a>
                                 <a href="http://twitter.com/larsonalonso" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
+                            </div>
+                        </div>
+                        <div class="span6 team">
+                            <img src="images/team/004.jpg" title=" " alt=" "/>
+                            <div class="clear"></div>
+                            <div class="sub_heading">Joaquín Salvachúa</div>
+                            <div class="clear"></div>
+                            <h4>Evangelist</h4>
+                            <div class="clear"></div>
+                            <p></p>
+                            <div class="single_break"></div>
+                            <div class="social-icons2">
+                                <a href="http://www.linkedin.com/profile/view?id=5040359" target="_blank" data-placement="top" data-original-title="LINKEDIN">i</a>
+                                <a href="http://twitter.com/jsalvachua" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
                             </div>
                         </div>
                     </div>
