--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <div class="span12">
                             <div class="main_heading">Licode<span><strong>&nbsp; / &nbsp;</strong>Open Source WebRTC Communications Platform</span></div>
                             <div class="promo">
-                                <p>Licode is our main core software platform. It is an Open Source project that allows you to include real-time communications like streaming or videoconference in your web application in a very easy an fast way. If you want to know more about Licode don't doubt in visit its website!</p>
+                                <p>Licode is our main core software platform. It is an Open Source project that allows you to include real-time communications like streaming or videoconference in your web application in a very easy and fast way. If you want to know more about Licode don't doubt in visit its website!</p>
                             </div>
                         </div>
                     </div>
