Add screen sharing toggle to basic example

--- a/extras/basic_example/public/index.html
+++ b/extras/basic_example/public/index.html
@@ -8,9 +8,12 @@
   <body>
 
     <button id="recordButton" onclick="startRecording()">Toggle Recording</button>
-    <div id="myVideo" style="width:320px; height: 240px;">
+    <button id="screenSharingButton" onclick="toggleScreenSharing()">Toggle Screen Sharing</button>
 
-    </div>
+    <div style="clear: both"></div>
+
+
+    <div id="myVideo" style="width:320px; height: 240px; float: left; border: solid blue 1px">Me</div>
 
   </body>
 </html>
