--- a/licode/roadmap.html
+++ b/licode/roadmap.html
@@ -44,10 +44,11 @@ roadmap: true
           <p class="lead">Licode is growing very fast, with new enhancements and features, such as Firefox compatibility and RTSP support.</p>
           <p>We are currently working to develop the next features in the short term:</p>
           <ul>
-            <li>Recording of video and audio in rooms.</li>
-            <li>Support to other browsers: Ericsson Bowser.</li>
-            <li>Include external streams from RTMP, raw RTP, and so on</li>
-            <li>Improve monitorization and notifications about rooms, users and streams</li>
+            <li>Improve monitorization and notifications about rooms, users and streams.</li>
+            <li>Add SCTP support to send data messages.</li>
+            <li>Improve scalability of Nuve.</li>
+            <li>Spread a room among multiple servers.</li>
+            <li>Hot migration of rooms between servers.</li>
           </ul>
           <p>Below you can see the last commits and open issues to check the current state of Licode</p>
           <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=ging&repo=licode&limit=10" allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
