Implemented full communication of RtpSource and Sink with erizoAPI and basicexample

--- a/extras/basic_example/public/index.html
+++ b/extras/basic_example/public/index.html
@@ -8,8 +8,8 @@
   <body>
 
     <button id="recordButton" onclick="startRecording()">Toggle Recording</button>
+    <button id="playButton" onclick="playRtp()">Play RTP</button>
     <div id="myVideo" style="width:320px; height: 240px;">
-
     </div>
 
   </body>
