--- a/licode/server-api.html
+++ b/licode/server-api.html
@@ -126,7 +126,7 @@ var roomName = 'myRoomWithMetadata';
 
 N.API.createRoom(roomName, function(room) {
   console.log('P2P room created with id: ', room._id);
-}, errorCallback, {data: {room_color: red, room_capacity: 10}});</pre>
+}, errorCallback, {data: {room_color: 'red', room_description: 'Room for testing metadata'}});</pre>
 
           <h3>Get Rooms</h3>
           <p>You can ask Nuve for a list of the rooms in your service:</p>
