Roadmap updated with JSEP

--- a/licode/roadmap.html
+++ b/licode/roadmap.html
@@ -26,11 +26,11 @@ roadmap: true
           <p>Licode now is fully functional and you can try it from last versions of Google Chrome. Actually we´re currently using Licode in several projects at the University:</p>
           <ul>
             <li>
-              <p class="bold">MCS5:</p> 
+              <p class="bold">MCS5:</p>
               <p>A national project with Telefonica to demonstrate new WebRTC features in desktop and mobile platforms. In this project we will show Licode in action in different scenarios: social TV, games and video-surveillance.</p>
             </li>
             <li>
-              <p class="bold">FI-CONTENT:</p> 
+              <p class="bold">FI-CONTENT:</p>
               <p>Licode is being implemented in a SmartCity application to show tourist videos to several users. Lycnkia will be integrate inside FIWare infrastructure to serve real-time communications and support real-time synchronization among clients. These clients will be connected from desktop and mobile clients just using the web browsers.</p>
             </li>
           </ul>
@@ -47,7 +47,7 @@ roadmap: true
             <li>Improve monitorization and notifications about rooms, users and streams.</li>
             <li>Add SCTP support to send data messages.</li>
             <li>Improve scalability of Nuve.</li>
-            <li>Spread a room among multiple servers.</li>
+            <li>Add JSEP support.</li>
             <li>Hot migration of rooms between servers.</li>
           </ul>
           <p>Below you can see the last commits and open issues to check the current state of Licode</p>
